--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "start": "vite preview --host 0.0.0.0 --port $PORT",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^4.6.2",
-    "@tailwindcss/postcss": "^4.0.17",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "lucide-react": "^0.487.0",
@@ -34,7 +34,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "lucide-react": "^0.487.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
