--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port $PORT",
+    "start": "node server.js",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
   },
@@ -16,6 +16,7 @@
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "express": "^5.1.0",
     "lucide-react": "^0.487.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
